# routes/auth.routes.js
@@ -5,11 +5,11 @@ const getLoggedUser = require("../middlewares/getLoggedUser");
 const { validateUser } = require("../models/user.js");
 const router = express.Router();
 
-router.post("/register",validateUser,Register);
-router.post("/login", Login);
+router.post("/users",validateUser,Register);
+router.post("/users/login", Login);
 router.get("/users", getAllUsers);
 router.get("/users/:id", getUser);
-router.patch("/users/update/:id",authCheck,updateUser);
-router.get("/getLoggedUser", getLoggedUser,getUserInfo)
+router.patch("/users",authCheck,updateUser);
+router.get("/users/info/loggedinuser",getLoggedUser,getUserInfo)
 
 module.exports = router;
